--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "astro": "^4.13.3",
     "astro-compress": "^2.2.21",
     "astro-icon": "^1.1.0",
+    "sharp": "^0.33.5",
     "tailwindcss": "^3.4.3",
     "theme-change": "^2.5.0"
   },
