--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -35,6 +35,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4.0.0
       - name: Setup package manager
         id: setup-package-manager
         run: |
